Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
   </div>
   <div class="row">
     <div class="col-lg-6 mt-5">
-      <img class="img-fluid h-75" data-aos="zoom-in-up" src="../porject-bootstrap.4/img (9).jpg" alt="">
+      <img class="img-fluid h-75" data-aos="zoom-in-up" src="img (9).jpg" alt="Img">
           </div>
           <div class="col-lg-6 bg-black justify-content-center mt-5 align-items-center"  data-aos="fade-up">
             <h2 class="text-center mt-5">Emerald design silver service</h2>
@@ -329,4 +329,5 @@
 
               
 </body>
+
 </html>
