--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
       <div class="col-lg-4">
         <img class="img-fluid image-1" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="../porject-bootstrap.4/Annotation 2025-10-27 075701.png" alt="">
+        data-aos-duration="2000" src="img9 . jpg" alt="image">
       </div>
       <div class="col-lg-4">
         <img class="img-fluid image-2" data-aos="flip-left"
@@ -165,7 +165,7 @@
     </div>
   
     <div class="col-lg-6 mt-3 " data-aos-anchor-placement="center-bottom">
-<img class="img-fluid" data-aos="zoom-in-up" src="../porject-bootstrap.4/img (10).jpg" alt="">
+<img class="img-fluid" data-aos="zoom-in-up"src="img9 . jpg" alt="image">
     </div>
   </div>
   <div class="row">
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
