--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1" src="../porject-bootstrap.4/img (18).jpg">
+    <img class="img1" src="myimage.png" alt="image">
     <div class="text">
     </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
