--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="myimage.png" alt="image"></div>
+        <div class="logo"><img class="w-50 h-50" src="" alt="image"></div>
        </div>
  
       <div class="col-lg-7">
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
