--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1" src="myimage.png" alt="image">
+    <img class="img1" src="" alt="">
     <div class="text">
     </div>
    </div>
@@ -131,7 +131,7 @@
       <div class="col-lg-4">
         <img class="img-fluid image-1" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="../porject-bootstrap.4/Annotation 2025-10-27 075701.png" alt="">
+        data-aos-duration="2000" src="myimage.png" alt="image">
       </div>
       <div class="col-lg-4">
         <img class="img-fluid image-2" data-aos="flip-left"
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
