--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="" alt="image"></div>
+        <div class="logo"><img class="w-50 h-50" src="" alt=""></div>
        </div>
  
       <div class="col-lg-7">
@@ -98,7 +98,7 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1" src="" alt="">
+    <img class="img1"  src="../porject-bootstrap.4/img (26).jpg" >
     <div class="text">
     </div>
    </div>
@@ -136,12 +136,12 @@
       <div class="col-lg-4">
         <img class="img-fluid image-2" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="../porject-bootstrap.4/Annotation 2025-10-27 075344.png" alt="">
+        data-aos-duration="2000" src="myimage.png" alt="image">
       </div>
       <div class="col-lg-4">
         <img class="img-fluid image-3" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="../porject-bootstrap.4/Annotation 2025-10-27 080155.png" alt="">
+        data-aos-duration="2000" src="myimage.png" alt="image">
       </div>
     </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
