--- a/about.html
+++ b/about.html
@@ -136,12 +136,12 @@
       <div class="col-lg-4">
         <img class="img-fluid image-2" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="myimage.png" alt="image">
+        data-aos-duration="2000" src="myphoto.png" alt="image">
       </div>
       <div class="col-lg-4">
         <img class="img-fluid image-3" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000" src="myimage.png" alt="image">
+        data-aos-duration="2000" src="photo.png" alt="image">
       </div>
     </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
