--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="" alt=""></div>
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
        </div>
  
       <div class="col-lg-7">
@@ -83,7 +83,7 @@
         </div>
         <div class="col-lg-6"  data-aos="zoom-out"   data-aos-delay="500">
        
-          <img class="img-fluid" src="../porject-bootstrap.4/img (19).jpg" alt="" >
+          <img class="img-fluid" src="photo4.png" alt="photo4" >
         </div>
       </div>
     </div>
@@ -98,17 +98,17 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1"  src="../porject-bootstrap.4/img (26).jpg" >
+    <img class="img1"  src="ptoto1.png" alt="photo1">
     <div class="text">
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="../porject-bootstrap.4/img (17).jpg" >
+    <img class="img1" src="ptoto2.png" alt="photo2">
     <div class="text">
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="../porject-bootstrap.4/img (26).jpg" >
+    <img class="img1" src="photos" alt="photos">
     <div class="text">
    </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
