--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-lg-6"  data-aos="zoom-out"   data-aos-delay="500">
        
-          <img class="img-fluid" src="photo4.png" alt="photo4" >
+          <img class="img-fluid" src="photo4.jpg" alt="photo4" >
         </div>
       </div>
     </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
