--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-lg-6"  data-aos="zoom-out"   data-aos-delay="500">
        
-          <img class="img-fluid" src="photo4.jpg" alt="photo4" >
+          <img class="img-fluid" src="photo4.jpg" alt="photo" >
         </div>
       </div>
     </div>
@@ -98,17 +98,17 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1"  src="ptoto1.png" alt="photo1">
+    <img class="img1"  src="ptoto1.png" alt="photo">
     <div class="text">
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="ptoto2.png" alt="photo2">
+    <img class="img1" src="ptoto2.png" alt="photo">
     <div class="text">
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="photos" alt="photos">
+    <img class="img1" src="photos" alt="photo">
     <div class="text">
    </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
