--- a/about.html
+++ b/about.html
@@ -98,12 +98,12 @@
     </p>
    <div class="slideshow-container mt-5" data-aos="zoom-in-down">
    <div class="mySlides fade">
-    <img class="img1" src="photo1.png" alt="photo1">
+    <img class="img1" src="photo1.png" alt="photo">
     <div class="text">
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="photo2.png" alt="photo2">
+    <img class="img1" src="photo2.png" alt="photo">
     <div class="text">
     </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
