--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
     </div>
    </div>
    <div class="mySlides fade">
-    <img class="img1" src="photos" alt="photo">
+    <img class="img1" src="photo5.png" alt="photo">
     <div class="text">
    </div>
    </div>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
