--- a/about.html
+++ b/about.html
@@ -165,12 +165,12 @@
     </div>
   
     <div class="col-lg-6 mt-3 " data-aos-anchor-placement="center-bottom">
-<img class="img-fluid" data-aos="zoom-in-up" src="../porject-bootstrap.4/img (10).jpg" alt="">
+<img class="img-fluid" data-aos="zoom-in-up" src="photo6.jpg" alt="photo">
     </div>
   </div>
   <div class="row">
     <div class="col-lg-6 mt-5">
-      <img class="img-fluid h-75" data-aos="zoom-in-up" src="img 9 .jpg" alt="image">
+      <img class="img-fluid h-75" data-aos="zoom-in-up" src="photo7.jpg" alt="photo">
           </div>
           <div class="col-lg-6 bg-black justify-content-center mt-5 align-items-center"  data-aos="fade-up">
             <h2 class="text-center mt-5">Emerald design silver service</h2>
@@ -331,6 +331,7 @@
 </body>
 
 </html>
+
 
 
 
