--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt=photo""></div>
        </div>
  
       <div class="col-lg-7">
@@ -68,7 +68,7 @@
 <!-- home -->
   <div class="slider">
     <div class="slide">
-      <div class="item" style="background-image:url('img-black\ \(4\).png');">
+      <div class="item" style="background-image:url('photo8.png');">
         <div class="contents">
           <div class="name"> Necklace</div>
           <div class="des">Life is like riding a bicycle. To keep your balance, you must keep moving.</div>
@@ -76,7 +76,7 @@
         </div>
       </div>
 
-      <div class="item" style="background-image:url('img-black\ \(7\).png');">
+      <div class="item" style="background-image:url('photo9.png');">
         <div class="contents">
           <div class="name">Bracelet</div>
           <div class="des">You must be the change you wish to see in the world</div>
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="item" style="background-image:url('img-black\ \(8\).png');">
+      <div class="item" style="background-image:url('photo10.png');">
         <div class="contents">
           <div class="name">Rings</div>
           <div class="des">Always remember that you are absolutely unique. Just like everyone else</div>
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div class="item" style="background-image:url('img-black\ \(2\).png');">
+      <div class="item" style="background-image:url('photo11.png');">
         <div class="contents">
           <div class="name">Necklace  </div>
           <div class="des">You have brains in your head. You have feet in your shoes</div>
@@ -228,4 +228,5 @@
 </script>
 
 </body>
+
 </html>
