--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt=photo""></div>
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
        </div>
  
       <div class="col-lg-7">
@@ -230,3 +230,4 @@
 </body>
 
 </html>
+
