--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+       <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
       </div>
  
       <div class="col-lg-7">
@@ -272,4 +272,5 @@
   AOS.init();
 </script>
 </body>
+
 </html>
