--- a/Single-Portfolio.html
+++ b/Single-Portfolio.html
@@ -29,7 +29,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
       </div>
  
       <div class="col-lg-7">
@@ -78,7 +78,7 @@
   <div class="container b-p shadow mt-5 container1 justify-content-center align-items-center" data-aos="fade-up">
     <div class="row">
         <div class="col-lg-5 portfolio-header">
-            <img class="img-fluid mt-3 "  data-aos="zoom-in" src="../porject-bootstrap.4/img (30).jpg" alt="">
+            <img class="img-fluid mt-3 "  data-aos="zoom-in" src="photo18.png" alt="photo">
         </div>
 
         <div class="col-lg-7 mt-5">
@@ -188,4 +188,5 @@
   </script>
  
 </body>
+
 </html>
