--- a/pricing.html
+++ b/pricing.html
@@ -21,7 +21,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-       <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+       <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo"></div>
       </div>
  
       <div class="col-lg-7">
@@ -185,4 +185,5 @@
     AOS.init();
   </script>
 </body>
+
 </html>
