--- a/pricing.html
+++ b/pricing.html
@@ -21,7 +21,7 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-       <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo"></div>
+       <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
       </div>
  
       <div class="col-lg-7">
@@ -187,3 +187,4 @@
 </body>
 
 </html>
+
