--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (26).png" alt="John Doe">
+      <img src="photo25.png" alt="photo">
       <h3>John Doe</h3>
       <p class="position">Founder & CEO</p>
       <p class="bio">Passionate about designing luxury jewelry and leading the team.</p>
@@ -89,7 +89,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (25).png" alt="Jane Smith">
+      <img src="photo26.png" alt="photo">
       <h3>Jane Smith</h3>
       <p class="position">Lead Designer</p>
       <p class="bio">Creating stunning and unique jewelry pieces with elegance.</p>
@@ -261,4 +261,5 @@
     });
   </script>
 </body>
+
 </html>
