--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (24).png" alt="Alex Brown">
+      <img src="photp27.png" alt="photo">
       <h3>Alex Brown</h3>
       <p class="position">Head of Production</p>
       <p class="bio">Ensuring every piece is crafted with precision and quality.</p>
@@ -114,7 +114,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (19).png" alt="Emily White">
+      <img src="photo31.png" alt="photo">
       <h3>Emily White</h3>
       <p class="position">Marketing Manager</p>
       <p class="bio">Sharing our story and helping clients discover our collections.</p>
@@ -263,3 +263,4 @@
 </body>
 
 </html>
+
