--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="photp27.png" alt="photo">
+      <img src="photo27.png" alt="photo">
       <h3>Alex Brown</h3>
       <p class="position">Head of Production</p>
       <p class="bio">Ensuring every piece is crafted with precision and quality.</p>
@@ -128,7 +128,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (21).png" alt="Michael Green">
+      <img src="photo28.png" alt="photo">
       <h3>Michael Green</h3>
       <p class="position">Sales Director</p>
       <p class="bio">Leading the sales team to provide the best customer experience.</p>
@@ -140,7 +140,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (22).png" alt="Sophia Lee">
+      <img src="photo29.png" alt="photo">
       <h3>Sophia Lee</h3>
       <p class="position">Customer Support</p>
       <p class="bio">Helping clients with queries and providing personalized support.</p>
@@ -263,4 +263,5 @@
 </body>
 
 </html>
+
 
