--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (23).png" alt="Daniel King">
+      <img src="photo30.png" alt="photo">
       <h3>Daniel King</h3>
       <p class="position">Finance Manager</p>
       <p class="bio">Managing budgets and ensuring financial stability of the brand.</p>
@@ -164,7 +164,7 @@
     <div class="team-card" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-      <img src="../porject-bootstrap.4/img (20).png" alt="Olivia Brown">
+      <img src="photo31.png" alt="photo">
       <h3>Olivia Brown</h3>
       <p class="position">Creative Strategist</p>
       <p class="bio">Planning campaigns and strategies to showcase our jewelry beautifully.</p>
@@ -263,5 +263,6 @@
 </body>
 
 </html>
+
 
 
