--- a/team.html
+++ b/team.html
@@ -26,9 +26,8 @@
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-
-      </div>
- 
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
+       </div>
       <div class="col-lg-7">
        <div class="nav-links">
          <a href="boot.html">Home</a>
@@ -263,6 +262,7 @@
 </body>
 
 </html>
+
 
 
 
