--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
       <div class="container">
        <div class="row">
         <div class="col-lg-3 ">
-          <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+          <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
         </div>
    
         <div class="col-lg-7">
@@ -76,7 +76,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/img (29).png" class="card-img-top" alt="Jewelry 1">
+          <img src="photo33.png" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Golden Elegance</h5>
             <p class="card-text">Explore the beauty of handcrafted gold jewelry designed for true luxury.</p>
@@ -89,7 +89,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/img (28).png" class="card-img-top" alt="Jewelry 2">
+          <img src="photo34.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Silver Charm</h5>
             <p class="card-text">Discover modern designs that blend simplicity and shine perfectly.</p>
@@ -235,4 +235,5 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 
 
 </body>
+
 </html>
