--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/Annotation 2025-10-29 062158.png" class="card-img-top" alt="Jewelry 3">
+          <img src="photo35.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Diamond Dreams</h5>
             <p class="card-text">Shine bright with timeless diamond jewelry collections.</p>
@@ -115,7 +115,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/img (31).png" class="card-img-top" alt="Jewelry 4">
+          <img src=photo36.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Pearl Perfection</h5>
             <p class="card-text">Classic pearl designs that never go out of style stunning new designs.</p>
@@ -237,3 +237,4 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
