--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src=photo36.png" class="card-img-top" alt="photo">
+          <img src="photo36.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Pearl Perfection</h5>
             <p class="card-text">Classic pearl designs that never go out of style stunning new designs.</p>
@@ -127,7 +127,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/img (32).png" class="card-img-top" alt="Jewelry 5">
+          <img src="photo37.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Emerald Elegance</h5>
             <p class="card-text">Experience the lush green of emerald in stunning new designs.</p>
@@ -140,7 +140,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
         <div class="card blog-card">
-          <img src="../porject-bootstrap.4/img (33).png" class="card-img-top" alt="Jewelry 6">
+          <img src="photo38.png" class="card-img-top" alt="photo">
           <div class="card-body">
             <h5 class="card-title">Rose Gold Romance</h5>
             <p class="card-text">Feel the warmth of rose gold in elegant handcrafted pieces.</p>
@@ -237,4 +237,5 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
 
