--- a/single-blog.html
+++ b/single-blog.html
@@ -22,7 +22,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
     <div class="container">
      <div class="row">
       <div class="col-lg-3 ">
-        <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt=""></div>
+        <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3"></div>
       </div>
  
       <div class="col-lg-7">
@@ -83,12 +83,12 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000" src="../porject-bootstrap.4/img (35).png" alt="">
+                data-aos-duration="2000" src="photo41.png" alt="photo">
               </div>
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000" src="../porject-bootstrap.4/Annotation 2025-10-29 081232.png" alt="">
+                data-aos-duration="2000" src="photo40.png" alt="photo">
               </div>
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
@@ -252,4 +252,5 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
   });
 </script>
 </body>
+
 </html>
