--- a/single-blog.html
+++ b/single-blog.html
@@ -83,7 +83,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000" src="photo41.png" alt="photo">
+                data-aos-duration="2000" src=".png" alt="photo">
               </div>
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
@@ -130,7 +130,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
   
         <h6 class="fw-bold mb-3">Recent Posts</h6>
         <div class="recent-post d-flex align-items-center mb-3">
-          <img data-aos="zoom-out" src="../porject-bootstrap.4/Annotation 2025-10-29 101513.png" alt="">
+          <img data-aos="zoom-out" src="photo41.png" alt="photo">
           <div class="ms-2 small me-3">
             <div class="fw-bold">Diamond Tips</div>
             <div class="text-muted">1 week ago</div>
@@ -254,3 +254,4 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
