--- a/single-blog.html
+++ b/single-blog.html
@@ -83,7 +83,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000" src=".png" alt="photo">
+                data-aos-duration="2000" src="photo43.png" alt="photo">
               </div>
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
@@ -93,7 +93,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
               <div class="col-12 col-md-4">
                 <img data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000" src="../porject-bootstrap.4/img (38).png" alt="">
+                data-aos-duration="2000" src="photo42.png" alt="photo">
               </div>
             </div>
   
@@ -254,4 +254,5 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
 
