--- a/single-blog.html
+++ b/single-blog.html
@@ -104,7 +104,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
         <article class="post-card mt-3">
           <div class="row g-0"  style="overflow-x: hidden;">
             <div class="col-4 mt-3 me-1">
-              <img data-aos="fade-down" src="../porject-bootstrap.4/img (36).png" alt="">
+              <img data-aos="fade-down" src="photo17.png" alt="photo">
             </div>
             <div class="col-7 p-3" data-aos="fade-down">
               <h3 class="post-title fs-6">Jewelry Trends 2025</h3>
@@ -137,28 +137,28 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
           </div>
         </div>
         <div class="recent-post d-flex align-items-center mb-3">
-          <img data-aos="zoom-out" src="../porject-bootstrap.4/Annotation 2025-10-29 103317.png" alt="">
+          <img data-aos="zoom-out" src="photo44.png" alt="photo">
           <div class="ms-2 small me-3">
             <div class="fw-bold">Rose & Gold</div>
             <div class="text-muted">2 weeks ago</div>
           </div>
         </div>
         <div class="recent-post d-flex align-items-center mb-3">
-            <img data-aos="zoom-out" src="../porject-bootstrap.4/Annotation 2025-10-29 102238.png" alt="">
+            <img data-aos="zoom-out" src="photo45.png" alt="photo">
             <div class="ms-2 small me-3">
               <div class="fw-bold">Diamond Tips</div>
               <div class="text-muted">1 week ago</div>
             </div>
           </div>
           <div class="recent-post d-flex align-items-center mb-3">
-            <img data-aos="zoom-out" src="../porject-bootstrap.4/Annotation 2025-10-29 101139.png" alt="">
+            <img data-aos="zoom-out" src="photo2.png" alt="photo">
             <div class="ms-2 small me-3">
               <div class="fw-bold">Rose & Gold</div>
               <div class="text-muted">2 weeks ago</div>
             </div>
           </div>
           <div class="recent-post d-flex align-items-center mb-3">
-            <img  data-aos="zoom-out" src="../porject-bootstrap.4/Annotation 2025-10-29 102405.png" alt="">
+            <img  data-aos="zoom-out" src="photo8.png" alt="photo">
             <div class="ms-2 small me-3">
               <div class="fw-bold">Diamond Tips</div>
               <div class="text-muted">1 week ago</div>
@@ -254,6 +254,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
 
 
 
