--- a/single-blog.html
+++ b/single-blog.html
@@ -137,14 +137,14 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
           </div>
         </div>
         <div class="recent-post d-flex align-items-center mb-3">
-          <img data-aos="zoom-out" src="photo44.png" alt="photo">
+          <img data-aos="zoom-out" src="photo44.jpg" alt="photo">
           <div class="ms-2 small me-3">
             <div class="fw-bold">Rose & Gold</div>
             <div class="text-muted">2 weeks ago</div>
           </div>
         </div>
         <div class="recent-post d-flex align-items-center mb-3">
-            <img data-aos="zoom-out" src="photo45.png" alt="photo">
+            <img data-aos="zoom-out" src="photo45.jpg" alt="photo">
             <div class="ms-2 small me-3">
               <div class="fw-bold">Diamond Tips</div>
               <div class="text-muted">1 week ago</div>
@@ -254,6 +254,7 @@ integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo
 </body>
 
 </html>
+
 
 
 
