--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 ">
-          <div class="logo"><img class="w-50 h-50" src="../porject-bootstrap.4/Annotation 2025-11-02 080054.png" alt="">
+          <div class="logo"><img class="w-50 h-50" src="photo47.png" alt="photo">
           </div>
         </div>
 
@@ -252,5 +252,6 @@
   </script>
 
 </body>
+
 
 </html>
