--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 ">
-          <div class="logo"><img class="w-50 h-50" src="photo47.png" alt="photo">
+          <div class="logo"><img class="w-50 h-50" src="photo3.png" alt="photo3">
           </div>
         </div>
 
@@ -77,7 +77,7 @@
       <div class="col-md-5" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <div class="photo-card" aria-hidden="true">
           <!-- عکس را می‌توانی اینجا عوض کنی؛ لینک نمونه بصورت داده‌ای قرار داده شده -->
-          <img src="../porject-bootstrap.4/Annotation 2025-10-28 051927.png" alt="Portrait" />
+          <img src="photo47.png" alt="photo">
         </div>
       </div>
 
@@ -255,3 +255,4 @@
 
 
 </html>
+
